﻿- Update AlgernonCommons


Version 1.0 -

- Update overlay transpilers (fix tree overlays not working in game version 1.16.1)


Version 0.9.9.2 -

- Update EManagersLib.API


Version 0.9.9.1 -

- Fix vanilla network tree tool toggle hotkey not working after options panel is opened


Version 0.9.9 -

- Switch to position- instead of index-based targeting for individual network prop replacements
- Update CitiesHarmony


Version 0.9.8.2 -

- Add additional index bounds check to building prop deserialization
- Increase highlighting negative Y range (to better identify elevated props)


Version 0.9.8.1 hotfix -

- Fix indivdual network replacement saving (missed index override commit)


Version 0.9.8 -

- Switch to position- instead of index-based targeting for individual building prop replacements
- Fix map tree replacement resetting to prop mode after applying replacement
- Add error notification when random prop or tree template can't be loaded


Version 0.9.7.2 -0

- Reduce minimum scaling to 0.1
- Update AlgernonCommons


Version 0.9.7.1 -

- Fix map replacement panel not opening with targeted prop already selected
- Fix random prop probabilities not being properly calculated when adding a new variant
- Add Chinese road arrow replacements
- Fix errors in some road sign replacement packs


Version 0.9.7 -

- Move prop detection triggers from initial to final props
- Fix panel backgrounds appearing transparent in editors
- Update AlgernonCommons


Version 0.9.6.3 -

- Add bounds checks to scaling factors
- Automatically pass current selection to scaling and random panels


Version 0.9.6.2 -

- Fix regression causing building prop modification to unpause games


Version 0.9.6.1 -

- Add CheckReferences call when modifying building props to catch situations where final SpecialPlace prop has been replaced


Version 0.9.6 -

- Major refactor of building and network replacement
- Increase offset slider displayed maximum to 32
- Implement AlgernonCommons