@@ -1,4 +1,5 @@
-﻿- Update AlgernonCommons
+﻿- Add checks for missing target and/or replacement prefabs
+- Update AlgernonCommons
 
 
 Version 1.0 -
@@ -20,7 +21,7 @@ Version 0.9.9 -
 
 - Switch to position- instead of index-based targeting for individual network prop replacements
 - Update CitiesHarmony
-
+e
 
 Version 0.9.8.2 -
 
